@@ -2,7 +2,7 @@
 <colors>	
 	<color name="black">ff111111</color>
 	<color name="selected">fff0f0f0</color>
-	<color name="unselected">ff919191</color>
+	<color name="unselected">ff818181</color>
 	<color name="disabled">ff515151</color>
 	<color name="accented">ffca1a1a1</color>
 </colors>
